feat(websocket): update service request creation to use nurse locations from WebSocket